inc/bb_api.h

  
typedef struct {
    uint8_t addr[BB_MAC_LEN];                                   
} bb_mac_t;
typedef enum {
    BB_SLOT_0 = 0,                                              
    BB_SLOT_AP = 0,                                             
    BB_SLOT_1,                                                  
    BB_SLOT_2,                                                  
    BB_SLOT_3,                                                  
    BB_SLOT_4,                                                  
    BB_SLOT_5,                                                  
    BB_SLOT_6,                                                  
    BB_SLOT_7,                                                  
    BB_SLOT_MAX
} bb_slot_e;
typedef enum {
    BB_PHY_PWR_OPENLOOP = 0,                                    
    BB_PHY_PWR_CLOSELOOP,                                       
} bb_phy_pwr_mode_e;
typedef enum {
    BB_BAND_HOP_2G_2_5G = 0,
    BB_BAND_HOP_5G_2_2G,
    BB_BAND_HOP_ITEM_MAX
} bb_band_hop_item_e;
typedef struct {
    uint8_t         slot;                                       
    uint8_t         dir;                                        
    uint8_t         cur_mcs;                                    
    uint8_t         prev_mcs;                                   
} bb_event_mcs_change_t;
typedef struct {
    bb_event_mcs_change_t info;
    uint32_t tx_result;
    uint8_t pkt_num;
} bb_event_mcs_change_end_t;
typedef struct {
    uint8_t         slot;                                       
    uint8_t         dir;                                        
    uint8_t         cur_chan;                                   
    uint8_t         prev_chan;                                  
} bb_event_chan_change_t;
typedef struct {
    uint16_t        snr;                                        
    uint16_t        ldpc_err;                                   
    uint16_t        ldpc_num;                                   
    uint8_t         gain_a;                                     
    uint8_t         gain_b;                                     
    uint8_t         mcs_rx : 5;                                 
    uint8_t         fch_lock : 1;                               
    uint8_t         padding[23];                                
} bb_plot_data_t;
typedef struct {
    uint8_t         user;
    uint8_t         plot_num;
    bb_plot_data_t  plot_data[BB_PLOT_POINT_MAX];
} bb_event_plot_data_t;
typedef struct {
    uint8_t         slot_state[BB_SLOT_MAX];                    
} bb_event_frame_start_t;
typedef struct bb_dev_info_t {
    uint8_t mac[32];
    int     maclen;
} bb_dev_info_t;
typedef struct {
    uint32_t id;
    uint32_t status;
    bb_dev_info_t bb_mac;
} bb_event_hotplug_t;
typedef struct {
    uint8_t         data[256];                                  
} bb_event_prj_dispatch_t;
typedef struct {
    uint8_t         data[1024];                                 
} bb_event_prj_dispatch2_t;
enum ctl_opt {
    sock_opt_echo,
};
typedef enum {
    BB_SOCK_QUERY_TX_BUFF_LEN,
    BB_SOCK_QUERY_RX_BUFF_LEN,
    BB_SOCK_READ_INV_DATA,
    BB_SOCK_SET_TX_LIMIT,
    BB_SOCK_GET_TX_LIMIT,
    BB_SOCK_IOCTL_ECHO = SO_USER_BASE_START + sock_opt_echo,
    BB_SOCK_TX_LEN_GET,
    BB_SOCK_TX_LEN_RESET,
    BB_SOCK_IOCTL_MAX,
} bb_sock_cmd_e;
typedef struct bb_sock_opt_t {
    uint32_t tx_buf_size;                                       
    uint32_t rx_buf_size;                                       
} bb_sock_opt_t;
typedef struct {
    uint8_t* addr;                                              
    uint32_t size;                                              
} bb_mem_block_t;
typedef struct {
    bb_mem_block_t block[2];                                    
} bb_query_mem_t;
typedef void (*bb_event_callback)(void* arg, void* user);  
typedef struct {
    uint32_t num;
    char     uart_dev_name[1000];
} uart_list_hd;
typedef struct {
    int BaudRate; 
    int ByteSize; 
    int Parity;   
    int StopBits; 
} uart_par;
typedef enum {
    uart_add_ok = 0,
    uart_open_fail,
    uart_had_added,
} uart_msg;
typedef struct {
    char     uart_dev_name[UART_NAME_LEN];
    uart_par par;
} uart_ioctl;
typedef struct bb_dev_t        bb_dev_t;        
typedef struct bb_dev_handle_t bb_dev_handle_t; 
typedef struct bb_host_t       bb_host_t;       
typedef struct bb_dev_info_t   bb_dev_info_t;   
typedef struct bb_dev_list_t   bb_dev_list_t;
typedef struct bb_dev_t *      bb_dev_list_t;
typedef struct {
    bb_mac_t        ap_mac;                                     
    uint8_t         clock;                                      
    uint8_t         init_mcs;                                   
    uint8_t         sq_report;                                  
    uint8_t         bb_mode;                                    
    uint8_t         slot_mode;                                  
    uint8_t         slot_bmp;                                   
    uint8_t         compact_br;                                 
} bb_conf_ap_t;
typedef struct {
    bb_mac_t        ap_mac;                                     
    uint8_t         clock;                                      
    uint8_t         init_mcs;                                   
    uint8_t         sq_report;                                  
    bb_mac_t        dev_mac;                                    
} bb_conf_dev_t;
typedef struct {
    uint8_t         enable;                                     
    uint8_t         master;                                     
    uint8_t         pin_group;                                  
    uint8_t         pin_port;                                   
} bb_conf_ap_sync_mode_t;
typedef struct {
    uint8_t         mode;                                       
    uint8_t         option;                                     
} bb_conf_br_hop_policy_t;
typedef struct {
    uint8_t         retx_cnt;
    uint8_t         power_diff;
} bb_chan_hop_item_t;
typedef struct {
    uint8_t         item_num;
    bb_chan_hop_item_t items[BB_CONFIG_MAX_CHAN_HOP_ITEM_NUM];
} bb_chan_hop_para_t;
typedef struct {
    uint8_t         retx_cnt;
    uint8_t         power_diff;
    uint8_t         chan_inr;
} bb_chan_hop_multi_para_t;
typedef struct {
    uint16_t        snr_diff;
    uint16_t        rssi_diff;
} bb_band_hop_item_t;
typedef struct {
    uint16_t        snr_thred;
    uint8_t         scan_count;
    uint8_t         scan_inr;
    uint8_t         round_inr;
    bb_band_hop_item_t items[BB_BAND_HOP_ITEM_MAX];
} bb_auto_band_para_t;
typedef struct {
    uint8_t         main_bw;                                    
    uint8_t         sub_bw;                                     
    uint8_t         chan_num;                                   
    int32_t         offset;                                     
} bb_subchan_t;
typedef struct {
    uint8_t         enable;                                     
    uint8_t         max_freq_num;                               
    uint8_t         stat_period;                                
    uint8_t         remove_percent;                             
} bb_conf_rc_hop_policy_t;
typedef struct {
    uint8_t         band_mode;                                  
    uint8_t         init_band;                                  
    int8_t          init_chan;                                  
    int8_t          bonus_low_band;                             
    uint8_t         flags;                                      
    uint8_t         fs_bw;                                      
    uint8_t         chan_num;                                   
    uint32_t        chan_freq[BB_CONFIG_MAX_CHAN_NUM];          
    uint32_t        chan_freq_slave[BB_CONFIG_MAX_CHAN_NUM];    
    bb_subchan_t    subchan;                                    
    bb_chan_hop_para_t hop_para;                                
    bb_chan_hop_multi_para_t hop_para_multi;                    
    bb_auto_band_para_t auto_band_para;                         
} bb_conf_chan_t;
typedef struct {
    uint32_t        freq_low;                                   
    uint32_t        freq_high;                                  
} bb_freq_range_t;
typedef struct {
    uint8_t         slot;                                       
    uint8_t         mac_num;                                    
    bb_mac_t        mac_tab[BB_CONFIG_MAX_SLOT_CANDIDATE];      
} bb_conf_candidates_t;
typedef struct {
    uint8_t         payload;                                    
    uint8_t         fch_info_len;                               
    uint8_t         tintlv_enable;                              
    uint8_t         tintlv_num;                                 
    uint8_t         tintlv_len;                                 
    uint8_t         tx_mode;                                    
    uint8_t         rx_mode;                                    
    uint8_t         bandwidth;                                  
    int8_t          retx_count;                                 
    int8_t          pre_enc_ref;                                
    uint8_t         pre_enc_sp;                                 
} bb_user_para_t;
typedef struct {
    uint8_t         user;                                       
    bb_user_para_t  tx_para;                                    
    bb_user_para_t  rx_para;                                    
} bb_conf_user_para_t;
typedef struct {
    uint8_t         mcs;                                        
    uint16_t        snr_up;                                     
    uint16_t        snr_dw;                                     
    uint8_t         ldpc_up_num;                                
    uint8_t         ldpc_dw_num;                                
    uint16_t        up_keep_time;                               
    uint16_t        dw_keep_time;                               
} bb_mcs_para_t;
typedef struct {
    uint8_t         slot;                                       
    uint8_t         flags;                                      
    uint16_t        delay_start;                                
    uint16_t        hold_time;                                  
    uint8_t         init_mcs;                                   
    uint8_t         mcs_num;                                    
    uint16_t        max_wait_time;                              
    bb_mcs_para_t   mcs_tab[BB_CONFIG_MAX_USER_MCS_NUM];        
} bb_conf_mcs_t;
typedef struct {
    uint8_t         enable;                                     
    uint8_t         window;                                     
    uint8_t         timeout;                                    
    uint32_t        offset;                                     
} bb_conf_distc_t;
typedef struct {
    bb_phy_pwr_mode_e pwr_mode;                                 
    uint8_t pwr_init;                                           
    uint8_t pwr_auto;                                           
    uint8_t pwr_min;                                            
    uint8_t pwr_max;                                            
}bb_phy_pwr_basic_t;
typedef struct {
    uint8_t         up_thred;                                   
    uint8_t         dw_thred;                                   
    uint8_t         keep_count;                                 
    uint8_t         period_max;                                 
} bb_auto_power_save_t;
typedef struct {
    uint8_t         flags;                                      
    uint8_t         period_fix;                                 
    bb_auto_power_save_t auto_policy;                           
} bb_conf_power_save_t;
typedef struct {
    uint8_t         mcs;                                        
    uint8_t         rf_mode;                                    
    uint8_t         tintlv_enable;                              
    uint8_t         tintlv_num;                                 
    uint8_t         tintlv_len;                                 
    uint8_t         bandwidth;                                  
    uint32_t        freq_khz;                                   
} bb_phy_status_t;
typedef struct {
    uint8_t         state;                                      
    uint8_t         rx_mcs;                                     
    bb_mac_t        peer_mac;                                   
} bb_link_status_t;
typedef struct {
    bb_phy_status_t tx_status;                                  
    bb_phy_status_t rx_status;                                  
} bb_user_status_t;