src/bb/c.zig

pub const bb_event_mcs_change_t = extern struct {
    slot: u8 = @import("std").mem.zeroes(u8),
    dir: u8 = @import("std").mem.zeroes(u8),
    cur_mcs: u8 = @import("std").mem.zeroes(u8),
    prev_mcs: u8 = @import("std").mem.zeroes(u8),
};
pub const bb_event_mcs_change_end_t = extern struct {
    info: bb_event_mcs_change_t = @import("std").mem.zeroes(bb_event_mcs_change_t),
    tx_result: u32 = @import("std").mem.zeroes(u32),
    pkt_num: u8 = @import("std").mem.zeroes(u8),
};
pub const bb_event_chan_change_t = extern struct {
    slot: u8 = @import("std").mem.zeroes(u8),
    dir: u8 = @import("std").mem.zeroes(u8),
    cur_chan: u8 = @import("std").mem.zeroes(u8),
    prev_chan: u8 = @import("std").mem.zeroes(u8),
};
// .\inc\bb_api.h:489:21: warning: struct demoted to opaque type - has bitfield
pub const bb_plot_data_t = opaque {};
pub const bb_event_plot_data_t = extern struct {
    user: u8 = @import("std").mem.zeroes(u8),
    plot_num: u8 = @import("std").mem.zeroes(u8),
    plot_data: [10]bb_plot_data_t = @import("std").mem.zeroes([10]bb_plot_data_t),
};
pub const bb_event_frame_start_t = extern struct {
    slot_state: [8]u8 = @import("std").mem.zeroes([8]u8),
};
pub const struct_bb_dev_info_t = extern struct {
    mac: [32]u8 = @import("std").mem.zeroes([32]u8),
    maclen: c_int = @import("std").mem.zeroes(c_int),
};
pub const bb_dev_info_t = struct_bb_dev_info_t;
pub const bb_event_hotplug_t = extern struct {
    id: u32 = @import("std").mem.zeroes(u32),
    status: u32 = @import("std").mem.zeroes(u32),
    bb_mac: bb_dev_info_t = @import("std").mem.zeroes(bb_dev_info_t),
};
pub const bb_event_prj_dispatch_t = extern struct {
    data: [256]u8 = @import("std").mem.zeroes([256]u8),
};
pub const bb_event_prj_dispatch2_t = extern struct {
    data: [1024]u8 = @import("std").mem.zeroes([1024]u8),
};
pub const sock_opt_echo: c_int = 0;
pub const enum_ctl_opt = c_uint;
pub const BB_SOCK_QUERY_TX_BUFF_LEN: c_int = 0;
pub const BB_SOCK_QUERY_RX_BUFF_LEN: c_int = 1;
pub const BB_SOCK_READ_INV_DATA: c_int = 2;
pub const BB_SOCK_SET_TX_LIMIT: c_int = 3;
pub const BB_SOCK_GET_TX_LIMIT: c_int = 4;
pub const BB_SOCK_IOCTL_ECHO: c_int = 192;
pub const BB_SOCK_TX_LEN_GET: c_int = 193;
pub const BB_SOCK_TX_LEN_RESET: c_int = 194;
pub const BB_SOCK_IOCTL_MAX: c_int = 195;
pub const bb_sock_cmd_e = c_uint;
pub const struct_bb_sock_opt_t = extern struct {
    tx_buf_size: u32 = @import("std").mem.zeroes(u32),
    rx_buf_size: u32 = @import("std").mem.zeroes(u32),
};
pub const bb_sock_opt_t = struct_bb_sock_opt_t;
pub const bb_mem_block_t = extern struct {
    addr: [*c]u8 = @import("std").mem.zeroes([*c]u8),
    size: u32 = @import("std").mem.zeroes(u32),
};
pub const bb_query_mem_t = extern struct {
    block: [2]bb_mem_block_t = @import("std").mem.zeroes([2]bb_mem_block_t),
};
pub const bb_event_callback = ?*const fn (?*anyopaque, ?*anyopaque) callconv(.C) void;
pub const uart_list_hd = extern struct {
    num: u32 = @import("std").mem.zeroes(u32),
    uart_dev_name: [1000]u8 = @import("std").mem.zeroes([1000]u8),
};
pub const uart_par = extern struct {
    BaudRate: c_int = @import("std").mem.zeroes(c_int),
    ByteSize: c_int = @import("std").mem.zeroes(c_int),
    Parity: c_int = @import("std").mem.zeroes(c_int),
    StopBits: c_int = @import("std").mem.zeroes(c_int),
};
pub const uart_add_ok: c_int = 0;
pub const uart_open_fail: c_int = 1;
pub const uart_had_added: c_int = 2;
pub const uart_msg = c_uint;
pub const uart_ioctl = extern struct {
    uart_dev_name: [24]u8 = @import("std").mem.zeroes([24]u8),
    par: uart_par = @import("std").mem.zeroes(uart_par),
};
pub const struct_bb_dev_t = opaque {};
pub const bb_dev_t = struct_bb_dev_t;
pub const struct_bb_dev_handle_t = opaque {};
pub const bb_dev_handle_t = struct_bb_dev_handle_t;
pub const struct_bb_host_t = opaque {};
pub const bb_host_t = struct_bb_host_t;
pub const bb_dev_list_t = ?*struct_bb_dev_t;
pub const bb_conf_ap_t = extern struct {
    ap_mac: bb_mac_t = @import("std").mem.zeroes(bb_mac_t),
    clock: u8 = @import("std").mem.zeroes(u8),
    init_mcs: u8 = @import("std").mem.zeroes(u8),
    sq_report: u8 = @import("std").mem.zeroes(u8),
    bb_mode: u8 = @import("std").mem.zeroes(u8),
    slot_mode: u8 = @import("std").mem.zeroes(u8),
    slot_bmp: u8 = @import("std").mem.zeroes(u8),
    compact_br: u8 = @import("std").mem.zeroes(u8),
};
pub const bb_conf_dev_t = extern struct {
    ap_mac: bb_mac_t = @import("std").mem.zeroes(bb_mac_t),
    clock: u8 = @import("std").mem.zeroes(u8),
    init_mcs: u8 = @import("std").mem.zeroes(u8),
    sq_report: u8 = @import("std").mem.zeroes(u8),
    dev_mac: bb_mac_t = @import("std").mem.zeroes(bb_mac_t),
};
pub const bb_conf_ap_sync_mode_t = extern struct {
    enable: u8 = @import("std").mem.zeroes(u8),
    master: u8 = @import("std").mem.zeroes(u8),
    pin_group: u8 = @import("std").mem.zeroes(u8),
    pin_port: u8 = @import("std").mem.zeroes(u8),
};
pub const bb_conf_br_hop_policy_t = extern struct {
    mode: u8 = @import("std").mem.zeroes(u8),
    option: u8 = @import("std").mem.zeroes(u8),
};
pub const bb_chan_hop_item_t = extern struct {
    retx_cnt: u8 = @import("std").mem.zeroes(u8),
    power_diff: u8 = @import("std").mem.zeroes(u8),
};
pub const bb_chan_hop_para_t = extern struct {
    item_num: u8 = @import("std").mem.zeroes(u8),
    items: [5]bb_chan_hop_item_t = @import("std").mem.zeroes([5]bb_chan_hop_item_t),
};
pub const bb_chan_hop_multi_para_t = extern struct {
    retx_cnt: u8 = @import("std").mem.zeroes(u8),
    power_diff: u8 = @import("std").mem.zeroes(u8),
    chan_inr: u8 = @import("std").mem.zeroes(u8),
};
pub const bb_band_hop_item_t = extern struct {
    snr_diff: u16 = @import("std").mem.zeroes(u16),
    rssi_diff: u16 = @import("std").mem.zeroes(u16),
};
pub const bb_auto_band_para_t = extern struct {
    snr_thred: u16 = @import("std").mem.zeroes(u16),
    scan_count: u8 = @import("std").mem.zeroes(u8),
    scan_inr: u8 = @import("std").mem.zeroes(u8),
    round_inr: u8 = @import("std").mem.zeroes(u8),
    items: [2]bb_band_hop_item_t = @import("std").mem.zeroes([2]bb_band_hop_item_t),
};
pub const bb_subchan_t = extern struct {
    main_bw: u8 = @import("std").mem.zeroes(u8),
    sub_bw: u8 = @import("std").mem.zeroes(u8),
    chan_num: u8 = @import("std").mem.zeroes(u8),
    offset: i32 = @import("std").mem.zeroes(i32),
};
pub const bb_conf_rc_hop_policy_t = extern struct {
    enable: u8 = @import("std").mem.zeroes(u8),
    max_freq_num: u8 = @import("std").mem.zeroes(u8),
    stat_period: u8 = @import("std").mem.zeroes(u8),
    remove_percent: u8 = @import("std").mem.zeroes(u8),
};
pub const bb_conf_chan_t = extern struct {
    band_mode: u8 = @import("std").mem.zeroes(u8),
    init_band: u8 = @import("std").mem.zeroes(u8),
    init_chan: i8 = @import("std").mem.zeroes(i8),
    bonus_low_band: i8 = @import("std").mem.zeroes(i8),
    flags: u8 = @import("std").mem.zeroes(u8),
    fs_bw: u8 = @import("std").mem.zeroes(u8),
    chan_num: u8 = @import("std").mem.zeroes(u8),
    chan_freq: [32]u32 = @import("std").mem.zeroes([32]u32),
    chan_freq_slave: [32]u32 = @import("std").mem.zeroes([32]u32),
    subchan: bb_subchan_t = @import("std").mem.zeroes(bb_subchan_t),
    hop_para: bb_chan_hop_para_t = @import("std").mem.zeroes(bb_chan_hop_para_t),
    hop_para_multi: bb_chan_hop_multi_para_t = @import("std").mem.zeroes(bb_chan_hop_multi_para_t),
    auto_band_para: bb_auto_band_para_t = @import("std").mem.zeroes(bb_auto_band_para_t),
};
pub const bb_freq_range_t = extern struct {
    freq_low: u32 = @import("std").mem.zeroes(u32),
    freq_high: u32 = @import("std").mem.zeroes(u32),
};
pub const bb_conf_candidates_t = extern struct {
    slot: u8 = @import("std").mem.zeroes(u8),
    mac_num: u8 = @import("std").mem.zeroes(u8),
    mac_tab: [5]bb_mac_t = @import("std").mem.zeroes([5]bb_mac_t),
};
pub const bb_user_para_t = extern struct {
    payload: u8 = @import("std").mem.zeroes(u8),
    fch_info_len: u8 = @import("std").mem.zeroes(u8),
    tintlv_enable: u8 = @import("std").mem.zeroes(u8),
    tintlv_num: u8 = @import("std").mem.zeroes(u8),
    tintlv_len: u8 = @import("std").mem.zeroes(u8),
    tx_mode: u8 = @import("std").mem.zeroes(u8),
    rx_mode: u8 = @import("std").mem.zeroes(u8),
    bandwidth: u8 = @import("std").mem.zeroes(u8),
    retx_count: i8 = @import("std").mem.zeroes(i8),
    pre_enc_ref: i8 = @import("std").mem.zeroes(i8),
    pre_enc_sp: u8 = @import("std").mem.zeroes(u8),
};
pub const bb_conf_user_para_t = extern struct {
    user: u8 = @import("std").mem.zeroes(u8),
    tx_para: bb_user_para_t = @import("std").mem.zeroes(bb_user_para_t),
    rx_para: bb_user_para_t = @import("std").mem.zeroes(bb_user_para_t),
};
pub const bb_mcs_para_t = extern struct {
    mcs: u8 = @import("std").mem.zeroes(u8),
    snr_up: u16 = @import("std").mem.zeroes(u16),
    snr_dw: u16 = @import("std").mem.zeroes(u16),
    ldpc_up_num: u8 = @import("std").mem.zeroes(u8),
    ldpc_dw_num: u8 = @import("std").mem.zeroes(u8),
    up_keep_time: u16 = @import("std").mem.zeroes(u16),
    dw_keep_time: u16 = @import("std").mem.zeroes(u16),
};
pub const bb_conf_mcs_t = extern struct {
    slot: u8 = @import("std").mem.zeroes(u8),
    flags: u8 = @import("std").mem.zeroes(u8),
    delay_start: u16 = @import("std").mem.zeroes(u16),
    hold_time: u16 = @import("std").mem.zeroes(u16),
    init_mcs: u8 = @import("std").mem.zeroes(u8),
    mcs_num: u8 = @import("std").mem.zeroes(u8),
    max_wait_time: u16 = @import("std").mem.zeroes(u16),
    mcs_tab: [16]bb_mcs_para_t = @import("std").mem.zeroes([16]bb_mcs_para_t),
};
pub const bb_conf_distc_t = extern struct {
    enable: u8 = @import("std").mem.zeroes(u8),
    window: u8 = @import("std").mem.zeroes(u8),
    timeout: u8 = @import("std").mem.zeroes(u8),
    offset: u32 = @import("std").mem.zeroes(u32),
};
pub const bb_phy_pwr_basic_t = extern struct {
    pwr_mode: bb_phy_pwr_mode_e = @import("std").mem.zeroes(bb_phy_pwr_mode_e),
    pwr_init: u8 = @import("std").mem.zeroes(u8),
    pwr_auto: u8 = @import("std").mem.zeroes(u8),
    pwr_min: u8 = @import("std").mem.zeroes(u8),
    pwr_max: u8 = @import("std").mem.zeroes(u8),
};
pub const bb_auto_power_save_t = extern struct {
    up_thred: u8 = @import("std").mem.zeroes(u8),
    dw_thred: u8 = @import("std").mem.zeroes(u8),
    keep_count: u8 = @import("std").mem.zeroes(u8),
    period_max: u8 = @import("std").mem.zeroes(u8),
};
pub const bb_conf_power_save_t = extern struct {
    flags: u8 = @import("std").mem.zeroes(u8),
    period_fix: u8 = @import("std").mem.zeroes(u8),
    auto_policy: bb_auto_power_save_t = @import("std").mem.zeroes(bb_auto_power_save_t),
};
pub const bb_phy_status_t = extern struct {
    mcs: u8 = @import("std").mem.zeroes(u8),
    rf_mode: u8 = @import("std").mem.zeroes(u8),
    tintlv_enable: u8 = @import("std").mem.zeroes(u8),
    tintlv_num: u8 = @import("std").mem.zeroes(u8),
    tintlv_len: u8 = @import("std").mem.zeroes(u8),
    bandwidth: u8 = @import("std").mem.zeroes(u8),
    freq_khz: u32 = @import("std").mem.zeroes(u32),
};
pub const bb_link_status_t = extern struct {
    state: u8 = @import("std").mem.zeroes(u8),
    rx_mcs: u8 = @import("std").mem.zeroes(u8),
    peer_mac: bb_mac_t = @import("std").mem.zeroes(bb_mac_t),
};
pub const bb_user_status_t = extern struct {
    tx_status: bb_phy_status_t = @import("std").mem.zeroes(bb_phy_status_t),
    rx_status: bb_phy_status_t = @import("std").mem.zeroes(bb_phy_status_t),
};
